# bublik-offer

./: .env.dist  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
bot/: __main__.py  settings.py
bot/routes/: offer.py  private.py
